# supplychain-ai-orchestrator

./: .gitignore
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/ai/: embeddings.py  llm_agent.py
apps/api/app/api/routes/: knowledge.py  portfolio.py  work_items.py
apps/api/app/core/: agents.py  decision_engine.py  orchestrator.py  policy.py  scenarios.py
apps/api/app/db/: models.py  session.py
apps/api/tests/: test_e2e_workflow.py
infra/local/: docker-compose.yml
supplychain-ui/: package-lock.json  package.json
supplychain-ui/app/: page.tsx
supplychain-ui/app/portfolio/: page.tsx
supplychain-ui/app/work-items/: page.tsx
supplychain-ui/lib/: api.ts
